# emp-ag2pc

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  add_2.circuit.txt  c2pc_config.h  feq.h  helper.h  run
.github/workflows/: arm.yml  build.yml  codeql.yml  x86.yml
bench/: 2pc.cpp  circuit_file.cpp
cmake/: emp-ag2pc-config.cmake
docs/: execution_strategies.md  performance_100m.md  profiling_100M.md  programming_modes.md
emp-ag2pc/: 2pc.h  abit.h  ag2pc_backend.h  ag2pc_circuit_types.h  amortized_2pc.h  auth_share_pool.h  circuit_layout.h  config.h  direct.h  emp-ag2pc.h  feq.h  fpre.h  function.h  helper.h  lambda_circuit_types.h  lambda_runner.h  leaky_deltaot.h  netmp.h  profiling.h  secure_wires.h  share_bundle.h  stream.h  triple_pool.h  triple_pool_cutchoose.h  wire_graph.h  wrk_backend.h
emp-ag2pc/backend/: canonical.h  engine.h  executor.h  flush_plan.h  helper.h  pass_ctx.h  passes.h  protocol.h  run_state.h  secure_wires.h  session.h  triple_pool.h
emp-ag2pc/frontend/: ag2pc.h  ag2pc_ctx.h  circuit_types.h  direct_backend.h  run.h
emp-ag2pc/session/: ag2pc_ctx.h  ag2pc_session.h
emp-agmpc/: auth_share_pool.h  circuit_layout.h  emp-agmpc.h  helper.h  mpc.h  secure_wires.h  share_bundle.h  triple_pool.h  wire_graph.h  wrk_backend.h
example/: 1_basics.cpp  2_reveal_and_continue.cpp  3_reusable_circuit.cpp  4_bit_strings.cpp  5_chunking.cpp  6_raw_program.cpp  CMakeLists.txt  README.md  common.h
test/: CMakeLists.txt  abit.cpp  add_2.cpp  aes.cpp  aes_mult_inputs.cpp  amortized_2pc.cpp  amortized_2pc2.cpp  auth_share.cpp  bench_100m.cpp  bench_example.cpp  bench_modes.cpp  bench_sha_common.h  c2pc_ip.h  cmpc_ip.h  cutchoose_mult.cpp  gr.cpp  gr.h  hmac.cpp  net_setup.h  prof_triple.cpp  scratch.cpp  sha1.cpp  sha256-impl.cpp  sha256.cpp  simple_circuit.cpp  single_execution.h  test_aes.cpp  test_aes_sha_builtin.cpp  test_body_replay_equiv.cpp  test_chain.cpp  test_common.h  test_context_api.cpp  test_direct_chunks.cpp  test_direct_crypto.cpp  test_direct_recorder.cpp  test_direct_semantics.cpp  test_engine_internal.cpp  test_flush_plan.cpp  test_frontend.cpp  test_frontend_api.cpp  (+31 more)
